--- a/views/crm_phonecall.xml
+++ b/views/crm_phonecall.xml
@@ -61,6 +61,9 @@
         <field name="model">crm.phonecall</field>
         <field name="inherit_id" ref="crm_phone.crm_phonecall_tree" />
         <field name="arch" type="xml">
+            <tree position="attributes">
+                <attribute name="editable"/>
+            </tree>
             <field name="opportunity_id" position="after">
                 <field name="support_ticket_id"/>
             </field>
@@ -82,6 +85,28 @@
         </field>
     </record>
 
+    <record id="crm_phone.crm_phonecall_action" model="ir.actions.act_window">
+        <field name="name">Phone Calls</field>
+        <field name="res_model">crm.phonecall</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,calendar,form</field>
+    </record>
+
+    <record id="crm_phone.crm_phonecall_action_done" model="ir.actions.act_window">
+        <field name="name">Logged Calls</field>
+        <field name="res_model">crm.phonecall</field>
+        <field name="view_mode">tree,calendar,form</field>
+        <field name="context">{'search_default_done': 1, 'default_state': 'done'}</field>
+        <field name="view_type">form</field>
+    </record>
+
+    <record id="crm_phone.crm_phonecall_action_open" model="ir.actions.act_window">
+        <field name="name">Scheduled Calls</field>
+        <field name="res_model">crm.phonecall</field>
+        <field name="view_mode">tree,calendar,form</field>
+        <field name="context">{'search_default_open': 1, 'default_state': 'open'}</field>
+        <field name="view_type">form</field>
+    </record>
 
 
 </odoo>
