--- a/views/website_support_ticket_views.xml
+++ b/views/website_support_ticket_views.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <data>                    
+    <data>
 
         <record id="website_support_ticket_view_form" model="ir.ui.view">
             <field name="name">website.support.ticket.form.view</field>
             <field name="model">website.support.ticket</field>
             <field name="inherit_id" ref="website_support.website_support_ticket_view_form"/>
             <field name="arch" type="xml">
-                <group position="before">
-                    <div class="oe_button_box" name="button_box">
-                        <button class="oe_inline oe_stat_button" 
-                            type="action"
-                            name="%(crm_phone.crm_phonecall_action)d"
-                            icon="fa-phone"
-                            context="{'search_default_support_ticket_id': active_id}">
-                            <field string="Calls" name="phonecall_count" widget="statinfo"/>
-                        </button>
+                <xpath expr="//div[@name='button_box']" position="inside">
+                    <button class="oe_inline oe_stat_button" 
+                        type="action"
+                        name="%(crm_phone.crm_phonecall_action)d"
+                        icon="fa-phone"
+                        context="{'search_default_support_ticket_id': active_id}">
+                        <field string="Calls" name="phonecall_count" widget="statinfo"/>
+                    </button>
 
-                        <button class="oe_inline oe_stat_button" 
-                          type="object"
-                          name="link_call_to_ticket"
-                          icon="fa-link"
-                          groups="base.group_partner_manager,sales_team.group_sale_manager,sales_team.group_sale_salesman">
-                        <p class="oe_inline">Link this ticket to the phonecall</p>>
-                        </button>
-                    </div>      
-                </group>   
+                    <button class="oe_inline oe_stat_button" 
+                        type="object"
+                        name="link_call_to_ticket"
+                        icon="fa-link"
+                        groups="base.group_partner_manager,sales_team.group_sale_manager,sales_team.group_sale_salesman">
+                            <div class="o_stat_info o_form_field">
+                                <span class="o_stat_text ">Link this ticket to the phonecall</span>
+                            </div>
+                    </button>
+                </xpath>
             </field>
         </record>
  
